Bug 472585 - 'Workers: 'importScripts()' with no args throws an exception against spec'. r+sr+a=sicking.